--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="http://localhost:3000/css/age.css" />
+    <link rel="stylesheet" href="http://localhost:3000/css/description.css" />
+    <link rel="stylesheet" href="http://localhost:3000/css/footer.css" />
+    <link rel="stylesheet" href="http://localhost:3000/css/major.css" />
+    <link rel="stylesheet" href="http://localhost:3000/css/header.css" />
+    <link rel="stylesheet" href="http://localhost:3000/css/name.css" />
+    <link rel="stylesheet" href="http://localhost:3000/css/profile.css" />
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <title>React App</title>
   </head>
   <body>
